--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/fruit_swipe.loader.js";
+      var loaderUrl = buildUrl + "/fruit_swipe_v2.loader.js";
       var config = {
-        dataUrl: buildUrl + "/fruit_swipe.data.unityweb",
-        frameworkUrl: buildUrl + "/fruit_swipe.framework.js.unityweb",
-        codeUrl: buildUrl + "/fruit_swipe.wasm.unityweb",
+        dataUrl: buildUrl + "/fruit_swipe_v2.data.unityweb",
+        frameworkUrl: buildUrl + "/fruit_swipe_v2.framework.js.unityweb",
+        codeUrl: buildUrl + "/fruit_swipe_v2.wasm.unityweb",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "Fruit Swipe",
